--- a/index.html
+++ b/index.html
@@ -1,23 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Vite App</title>
-  </head>
-  <body>
-    <canvas id="canvas"></canvas>
-    <script type="module" src="/main.js"></script>
-    <script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>
-
-    <script type="importmap">
-      {
-          "imports": {
-              "three": "../build/three.module.js",
-              "three/addons/": "./jsm/"
-          }
-      }
-    </script>
-  </body>
+    <style>
+        body {margin: 0;}
+        canvas {display: block;}
+    </style>
+</head>
+<body>
+<div id="container"></div>
+<div id="label" class="hidden">Hover over the cube</div>
+<script type="module" src="/main.js"></script>
+</body>
 </html>
