--- a/test.html
+++ b/test.html
@@ -5,11 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Vite App</title>
+    <style>
+        body{
+            height: 100vh;
+            width: 100vw;
+            background-color: red;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-<div id="container"></div>
-<div id="popup" class="hidden"></div>
-<div id="cursor"></div>
-<script type="module" src="/main.js"></script>
+Test
+<script type="module" src="/test.js"></script>
 </body>
 </html>
