--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <div id="container"></div>
 <div id="popup" class="hidden"></div>
 <div id="cursor"></div>
+<div id="introduction">
+    <h1>Hey, I'm Elias an accredited Information Technologist.</h1>
+    <p>Learn more about me by clicking and dragging the cube and selecting a side!</p>
+</div>
 <script type="module" src="/main.js"></script>
 </body>
 </html>
