--- a/index.html
+++ b/index.html
@@ -9,11 +9,30 @@
 <body>
 <div id="container"></div>
 <div id="popup" class="hidden"></div>
-<div id="cursor"></div>
 <div id="introduction">
     <h1>Hey, I'm Elias an accredited Information Technologist.</h1>
     <p>Learn more about me by clicking and dragging the cube and selecting a side!</p>
 </div>
+<div id="projects" class="hidden">
+    PROJECTS
+</div>
+<div id="skills" class="hidden">
+    SKILLS
+</div>
+<div id="contact" class="hidden">
+    CONTACT
+</div>
+<div id="aboutme" class="hidden">
+    ABOUT ME
+</div>
+<div id="certificates" class="hidden">
+    CERTIFICATES
+</div>
+<div id="education" class="hidden">
+    EDUCATION / INFO
+</div>
+<div id="close" class="hidden">X</div>
+<div id="cursor"></div>
 <script type="module" src="/main.js"></script>
 </body>
 </html>
