--- a/index.html
+++ b/index.html
@@ -2,126 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
+    <link rel="icon" type="image/svg+xml" href="/assets/vite.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Vite App</title>
 </head>
 <body>
 <div id="container"></div>
-<div id="popup" class="hidden"></div>
-<div id="introduction">
-    <h1>Elias Jurkeit</h1>
-    <h2>Application Developer by trade.</h2>
-    <h2>Creative thinker by heart.</h2>
-</div>
-<div id="projects" class="hidden">
-    <h1>Projects</h1>
-    <div class="project">
-        May 22 – July 23
-
-        Business Network Solutions Department
-
-        Full-Stack Developer
-
-        Led the development of an Alpha Helper-Software using Java (Spring) and JavaScript(Angular) as well as various Cloud and DevOps Technologies for the Marley System Team in the BNS Department, delivering innovative solutions and achieving business objectives
-    </div>
-    <div class="project">
-        May 21 – May 22
-
-        Voice IP Department
-
-        DevOps Developer
-
-        Spearheaded the creation of a Monitoring Dashboard with alarms using Grafana andPrometheus for the VoIP Department, showcasing technical leadership and advisory skills.
-    </div>
-    <div class="project">
-        August 20 – April 21
-
-        Problem 2 Solution Department
-
-        Full-Stack Developer
-
-        Successfully developed a Business Pilot with Python and JavaScript (Vue.js) for the
-
-        A-Team in the P2S Department, demonstrating expertise in architecture design andtechnological advisory.
-    </div>
-
-    <div class="project">
-        February 20 – August 20
-
-        Problem 2 Solution Department
-
-        DevOps Developer
-
-        Contributed to DevOps development by creating a pipeline using Java (Groovy) andvarious DevOps tools (Jenkins, Kibana, Artifactory, Sonarqube, Snyk) for the SRE Team inthe P2S Department, gaining valuable experience in DevOps principles.
-    </div>
-    <div class="project">
-        August 19 – February 20
-
-        Talent Squad
-
-        Frontend Developer
-
-        Independently developed a web application using JavaScript, HTML, and CSS for theTalented Squad, showcasing self-directed work and a strong understanding ofprogramming concepts.
-    </div>
-</div>
-<div id="skills" class="hidden">
-    <h1>Skills</h1>
-    <!-- wordcloud -->
-    Backend (very good)
-    Frontend (very good)
-    API Integration (very good)
-    DevOps Tools (good)
-    SRE (mediocre)
-    Web Design (very good)
-</div>
-<div id="contact" class="hidden">
-    <h1>Contact</h1>
-    Email: elias.jurkeit@swisscom.com
-    Phone: +41 79 749 65 15
-</div>
-<div id="about" class="hidden">
-    <h1>About Me</h1>
-    <img src="portrait.jpeg" alt="Headshot of Elias Jurkeit">
-    Hello! I’m an Information Technologist Apprentice specializing in Application Development. I'm currently in my 5th year of apprenticeship and can dedicate 100% of my time because I already finished vocational school. At 20 years old, I bring a youthful perspective and a passion for full-stack application development. My experience includes successfully developing applications in Java, JavaScript, and other technologies, with a track record of delivering business-driven solutions. I'm excited to contribute my skills to the next swisscom project.
-</div>
-<div id="certs" class="hidden">
-    <h1>Certificates & Education</h1>
-    <section>
-        <h2>Certificates</h2>
-        Cambridge C1 Advanced in English, Juni 2019, Grade C
-        Cambridge B2 First in English, Juni 2018, Grade A+
-    </section>
-    <section>
-        <h2>Education</h2>
-        August 2023
-        Vocational School
-        BBW, Winterthur
-
-        July 2019
-        Compulsory Education
-        Schule Boden, Richterswil
-    </section>
-</div>
-<div id="info" class="hidden">
-    <h1>Info</h1>
-    Made with HTML, CSS, raw JavaScript and Three.js library.
-    Built with Vite, hosted on GitHub, deployed via Netlify.
-</div>
-<div id="hellyeah" class="hidden">false</div>
-<div id="close" class="hidden"  style="cursor: none" onclick="
-document.getElementById('projects').classList.add('hidden');
-document.getElementById('skills').classList.add('hidden');
-document.getElementById('contact').classList.add('hidden');
-document.getElementById('about').classList.add('hidden');
-document.getElementById('certs').classList.add('hidden');
-document.getElementById('info').classList.add('hidden');
-document.getElementById('close').classList.add('hidden')
-document.getElementById('hellyeah').textContent = 'false'"
->
-    X
-</div>
-<div id="cursor" style="pointer-events: none; cursor: none;"></div>
 <script type="module" src="/main.js"></script>
 </body>
 </html>
