--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 <div id="container"></div>
+<video id="video" loop crossOrigin="anonymous" playsinline style="display:none">
+<!--    <source src="assets/sintel.ogv" type='video/ogg; codecs="theora, vorbis"'>-->
+    <source src="assets/1954.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+</video>
 <script type="module" src="/main.js"></script>
 </body>
 </html>
